[tool.poetry]
name = "Accointing"
version = "0.1.0"
description = "A CLI for Accointing.com."
authors = ["Heinz-Peter Liechtenecker <heinz.liechtenecker@gmail.com>"]
readme = "readme.md"

[tool.poetry.scripts]
accointing-cli = "accointing.cli:app"

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^21.4.0"
black = "^22.1.0"
typer = {extras = ["all"], version = "^0.4.0"}
cattrs = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
